# forma

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.claude/projects/-home-magicaltux-projects-forma/memory/: browser-compositing.md  multiwindow-model.md
.github/workflows/: ci.yml  visual.yml
crates/forma/: Cargo.toml
crates/forma-anim/: Cargo.toml
crates/forma-anim/src/: lib.rs
crates/forma-core/: Cargo.toml
crates/forma-core/src/: a11y.rs  clipboard.rs  diff.rs  element.rs  lib.rs  render.rs  runtime.rs
crates/forma-geometry/: Cargo.toml
crates/forma-geometry/src/: affine.rs  insets.rs  lib.rs  point.rs  rect.rs  size.rs  vec2.rs
crates/forma-gpu/: Cargo.toml
crates/forma-gpu/shaders/: triangle.frag  triangle.vert.spv
crates/forma-gpu/src/: d3d.rs  gl.rs  lib.rs  metal.rs  vulkan.rs
crates/forma-layout/: Cargo.toml
crates/forma-layout/src/: lib.rs
crates/forma-platform/: Cargo.toml
crates/forma-platform/src/: a11y.rs  error.rs  event.rs  lib.rs  sandbox.rs  scm.rs  shm.rs  uia.rs  window.rs
crates/forma-platform/src/backend/: android.rs  headless.rs  ios.rs  macos.rs  mod.rs  wayland.rs  windows.rs  x11.rs
crates/forma-render/: Cargo.toml
crates/forma-render/src/: color.rs  convert.rs  lib.rs  scene.rs  software.rs  surface.rs  text.rs
crates/forma-style/: Cargo.toml
crates/forma-style/src/: lib.rs
crates/forma-web/: Cargo.toml
crates/forma-web/src/: lib.rs
crates/forma-web/web/: index.html  webgpu.html
crates/forma-widgets/: Cargo.toml
crates/forma-widgets/src/: lib.rs
crates/forma/src/: lib.rs
crates/forma/tests/: conformance.rs
crates/stipple/: CHANGELOG.md  Cargo.toml
crates/stipple-anim/: Cargo.toml
crates/stipple-anim/src/: lib.rs
crates/stipple-core/: Cargo.toml
crates/stipple-core/src/: a11y.rs  diff.rs  element.rs  lib.rs  render.rs  runtime.rs
crates/stipple-geometry/: Cargo.toml
crates/stipple-geometry/src/: affine.rs  lib.rs  physical.rs
crates/stipple-gpu/: Cargo.toml
crates/stipple-gpu/shaders/: triangle.frag.spv  triangle.vert
crates/stipple-gpu/src/: d3d.rs  gl.rs  lib.rs  metal.rs  vulkan.rs
crates/stipple-layout/: Cargo.toml
crates/stipple-layout/src/: lib.rs
crates/stipple-platform/: CHANGELOG.md  Cargo.toml
crates/stipple-platform/src/: a11y.rs  access.rs  dialog.rs  event.rs  lib.rs  sandbox.rs  scm.rs  shm.rs  uia.rs  window.rs
crates/stipple-platform/src/backend/: android.rs  headless.rs  ios.rs  macos.rs  mod.rs  wayland.rs  windows.rs  x11.rs
crates/stipple-render/: Cargo.toml
crates/stipple-render/src/: color.rs  convert.rs  lib.rs  scene.rs  software.rs  surface.rs  text.rs
crates/stipple-style/: Cargo.toml
crates/stipple-style/src/: lib.rs
crates/stipple-web/: Cargo.toml
crates/stipple-web/src/: lib.rs
crates/stipple-web/web/: index.html
crates/stipple-widgets/: CHANGELOG.md  Cargo.toml
crates/stipple-widgets/src/: lib.rs
crates/stipple/src/: lib.rs
crates/stipple/tests/: conformance.rs
examples/a11ydemo/: Cargo.toml
examples/a11ydemo/src/: main.rs
examples/androiddemo/: Cargo.toml
examples/androiddemo/src/: lib.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/clickdemo/: Cargo.toml
examples/clickdemo/src/: main.rs
examples/clipboarddemo/: Cargo.toml
examples/clipboarddemo/src/: main.rs
examples/contentproc/: Cargo.toml
examples/contentproc/src/: main.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/d3ddemo/: Cargo.toml
examples/d3ddemo/src/: main.rs
examples/dmabuftest/: Cargo.toml
examples/dmabuftest/src/: main.rs
examples/dri3probe/: Cargo.toml
examples/dri3probe/src/: main.rs
examples/filedialog/: Cargo.toml
examples/filedialog/src/: main.rs
examples/form/: Cargo.toml
examples/form/src/: main.rs
examples/gallery/: Cargo.toml
examples/gallery/src/: main.rs
examples/gpudemo/: Cargo.toml
examples/gpudemo/src/: main.rs
examples/gpuwindow/: Cargo.toml
examples/gpuwindow/src/: main.rs
examples/hoverdemo/: Cargo.toml
examples/hoverdemo/src/: main.rs
examples/material3demo/: Cargo.toml
examples/material3demo/src/: main.rs
examples/metaldemo/: Cargo.toml
examples/metaldemo/src/: main.rs
examples/multiwindow/: Cargo.toml
examples/multiwindow/src/: main.rs
examples/overlaydemo/: Cargo.toml
examples/overlaydemo/src/: main.rs
examples/scrolldemo/: Cargo.toml
examples/scrolldemo/src/: main.rs
examples/tabsdemo/: Cargo.toml
examples/tabsdemo/src/: main.rs
examples/textarea/: Cargo.toml
examples/textarea/src/: main.rs
examples/textinput/: Cargo.toml
examples/textinput/src/: main.rs
examples/themegallery/: Cargo.toml
examples/themegallery/src/: main.rs
examples/uiademo/: Cargo.toml
examples/uiademo/src/: main.rs
examples/viewportdemo/: Cargo.toml
examples/viewportdemo/src/: main.rs
examples/window/: Cargo.toml
examples/window/src/: main.rs
