[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
# Floor is set by the oxideav stack: oxideav-scribe → oxideav-png → compcol
# requires rustc 1.88. (We'd happily target 1.86 otherwise.)
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/KarpelesLab/stipple"
authors = ["Karpelès Lab Inc."]

[workspace.dependencies]
# --- Stipple internal crates ---
stipple-geometry = { version = "0.0.1", path = "crates/stipple-geometry" }
stipple-render = { version = "0.0.1", path = "crates/stipple-render" }
stipple-platform = { version = "0.0.1", path = "crates/stipple-platform" }
stipple-layout = { version = "0.0.1", path = "crates/stipple-layout" }
stipple-core = { version = "0.0.1", path = "crates/stipple-core" }
stipple-anim = { version = "0.0.1", path = "crates/stipple-anim" }
stipple-style = { version = "0.0.1", path = "crates/stipple-style" }
stipple-widgets = { version = "0.0.1", path = "crates/stipple-widgets" }
stipple-gpu = { version = "0.0.1", path = "crates/stipple-gpu" }
stipple = { version = "0.0.1", path = "crates/stipple" }

# --- oxideav media stack (the one sanctioned heavy dependency) ---
# Pure-Rust content rendering: scene graph, CPU rasterizer, font shaping,
# image decode, SVG. See ROADMAP.md §1 for the dependency policy.
oxideav-core = "0.1.27"
oxideav-raster = "0.1.2"
oxideav-scribe = "0.1.8"
oxideav-ttf = "0.1.6"
oxideav-otf = "0.1.2"
oxideav-svg = "0.1.5"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
