[package]
name = "forma-anim"
description = "Forma's animation primitives — easing curves, tweening, and a simple spring, driven by the platform frame clock."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
