[package]
name = "forma-core"
description = "Forma's runtime: the View trait, the element IR, and the layout + paint passes that turn a declarative UI into a renderable scene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forma-geometry.workspace = true
forma-layout.workspace = true
forma-render.workspace = true
forma-style.workspace = true

[lints]
workspace = true
