[package]
name = "forma-geometry"
description = "Logical-pixel 2D geometry primitives for the Forma UI toolkit — Point, Size, Vec2, Rect, Insets, Affine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
