[package]
name = "forma-widgets"
description = "Forma's self-drawn standard widget library — panels, rows/columns, buttons, dividers, spacers — built on the forma-core element IR."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forma-geometry.workspace = true
forma-core.workspace = true
forma-style.workspace = true
forma-render.workspace = true

[lints]
workspace = true
