[package]
name = "forma"
description = "Forma: a cross-platform, self-drawn UI toolkit in Rust. Umbrella crate — App builder, prelude, and re-exports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forma-geometry.workspace = true
forma-render.workspace = true
forma-platform.workspace = true
forma-layout.workspace = true
forma-core.workspace = true
forma-anim.workspace = true
forma-style.workspace = true
forma-widgets.workspace = true

[lints]
workspace = true
