[package]
name = "stipple-core"
description = "Stipple's runtime: the View trait, the element IR, and the layout + paint passes that turn a declarative UI into a renderable scene."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
stipple-geometry.workspace = true
stipple-layout.workspace = true
stipple-render.workspace = true
stipple-style.workspace = true

[lints]
workspace = true
