[package]
name = "stipple-platform"
description = "Stipple's platform layer: native windowing, input, IME, clipboard, and surface acquisition. The only crate with per-OS code."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
stipple-geometry.workspace = true
stipple-render.workspace = true

[lints]
workspace = true
