[package]
name = "stipple-render"
description = "The Stipple rendering seam: builds an oxideav scene graph, rasterizes it on the CPU, and presents through a backend-agnostic Surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
stipple-geometry.workspace = true
oxideav-core.workspace = true
oxideav-raster.workspace = true
oxideav-scribe.workspace = true

[lints]
workspace = true
