[package]
name = "stipple-style"
description = "Stipple's design tokens and themes — colors, spacing, radius, and typography scales for the self-drawn widget set."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
stipple-render.workspace = true

[lints]
workspace = true
