[package]
name = "stipple-web"
description = "Stipple web target: a wasm module that renders a Stipple UI and exposes the RGBA framebuffer for a <canvas> to blit (no wasm-bindgen)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stipple.workspace = true

[lints]
workspace = true
