[package]
name = "stipple-widgets"
description = "Stipple's self-drawn standard widget library — panels, rows/columns, buttons, dividers, spacers — built on the stipple-core element IR."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
stipple-geometry.workspace = true
stipple-core.workspace = true
stipple-style.workspace = true
stipple-render.workspace = true

[lints]
workspace = true
