[package]
name = "stipple"
description = "Stipple: a cross-platform, self-drawn UI toolkit in Rust. Umbrella crate — App builder, prelude, and re-exports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
stipple-geometry.workspace = true
stipple-render.workspace = true
stipple-platform.workspace = true
stipple-layout.workspace = true
stipple-core.workspace = true
stipple-anim.workspace = true
stipple-style.workspace = true
stipple-widgets.workspace = true

[lints]
workspace = true
