[package]
name = "a11ydemo"
description = "Forma example: connect to D-Bus with the hand-written client in forma-platform (the AT-SPI accessibility bridge foundation) and print the unique name."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
forma.workspace = true
forma-platform.workspace = true

[lints]
workspace = true
