[package]
name = "androiddemo"
description = "Stipple example: a NativeActivity entry point that renders a Stipple frame to the Android ANativeWindow surface (built as a cdylib for the APK)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
# Android loads the app as a shared library named lib<name>.so; the APK's
# NativeActivity references it via android.app.lib_name = "stipple_android".
name = "stipple_android"
crate-type = ["cdylib"]

[dependencies]
stipple.workspace = true
stipple-platform.workspace = true

[lints]
workspace = true
