[package]
name = "clickdemo"
description = "Stipple example: the whole window is a button that counts clicks — used by CI to verify real native input."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
stipple.workspace = true

[lints]
workspace = true
