[package]
name = "clipboarddemo"
description = "Forma example: copy/cut/paste in a text field (Ctrl+C/X/V), synced with the OS clipboard."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
forma.workspace = true

[lints]
workspace = true
