[package]
name = "counter"
description = "Forma example: an interactive counter driven by on_tap handlers, rendered before and after clicks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
forma.workspace = true
oxideav-png.workspace = true

[lints]
workspace = true
