[package]
name = "d3ddemo"
description = "Stipple example: exercise the raw Direct3D 11 (WARP) backend in stipple-gpu and print what it created."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
stipple-gpu.workspace = true

[lints]
workspace = true
