[package]
name = "dmabuftest"
description = "Forma spike: prove cross-process GPU surface sharing — export a GL texture as a dma-buf and re-import it (EGL_MESA_image_dma_buf_export / EGL_EXT_image_dma_buf_import)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
forma-gpu.workspace = true

[lints]
workspace = true
