[package]
name = "dri3probe"
description = "Stipple spike: DRI3Open over the raw X11 socket -> the server's DRM fd -> bind that GPU via GBM and round-trip a dma-buf (DRI3 + Present groundwork)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
stipple-platform.workspace = true
stipple-gpu.workspace = true

[lints]
workspace = true
