[package]
name = "filedialog"
description = "Forma example: native file dialog via the xdg-desktop-portal FileChooser (D-Bus), with a built-in mock portal for headless verification."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
forma.workspace = true
forma-platform.workspace = true

[lints]
workspace = true
