[package]
name = "filedialog"
description = "Stipple example: native file dialog via the xdg-desktop-portal FileChooser (D-Bus), with a built-in mock portal for headless verification."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
stipple.workspace = true
stipple-platform.workspace = true

[lints]
workspace = true
