[package]
name = "form"
description = "Forma example: a focusable text field edited via keyboard input, rendered to PNG."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
forma.workspace = true
oxideav-png.workspace = true

[lints]
workspace = true
